# rust-swapi-client

./: Cargo.toml  LICENSE  README.md
src/: common.rs  lib.rs  objects.rs  requests.rs
