[package]
name = "swapi_client"
version = "0.0.5"
edition = "2018"
authors = ["Jensen Wijaya <weiztech@gmail.com>"]
description = "Rust client for Star Wars API (https://swapi.co/)"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"